<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundPersonalHealth"
    tools:context="com.carvalhodj.personalhealth.gui.CadastroUsuarioActivity">

    <EditText
        android:id="@+id/campoNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_field_hint"
        android:inputType="textPersonName"
        android:layout_marginTop="24dp"
        android:maxLines="1"
        android:textSize="16sp"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/campoEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_field_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="24dp"
        android:maxLines="1"
        android:textSize="16sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/campoNome" />

    <EditText
        android:id="@+id/campoSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_field_hint"
        android:inputType="textPassword"
        android:layout_marginTop="24dp"
        android:maxLines="1"
        android:textSize="16sp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/campoEmail" />

    <EditText
        android:id="@+id/campoRepeteSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password_field_hint"
        android:inputType="textPassword"
        android:layout_marginTop="24dp"
        android:maxLines="1"
        android:textSize="16sp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/campoSenha"/>

    <Button
        android:id="@+id/cadastro_botao_parear_biosensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_pair_biosensor_text"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:layout_below="@id/campoRepeteSenha"
        android:layout_alignParentStart="true"
        android:onClick="onButtonClickCadastroUsuario"/>

    <Button
        android:id="@+id/cadastro_botao_perfil_biologico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_collect_biological_data_text"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/cadastro_botao_parear_biosensor"
        android:layout_alignParentStart="true"
        android:onClick="onButtonClickCadastroUsuario"/>

    <Button
        android:id="@+id/botao_cadastrar_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit_text"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cadastro_botao_perfil_biologico"
        android:onClick="onButtonClickCadastroUsuario"/>

</RelativeLayout>
